# youtube_music_downloader

./: README.md  adding_cover_image_to_music.py  main.py  notes.md  playlist_viewer.py  pyproject.toml  thumbnail_downloader.py
app/: __init__.py  music.py
app/templates/: base.html  index.html
app/templates/music/: index.html
