[tool.poetry]
name = "youtube-music-downloader"
version = "0.1.0"
description = ""
authors = ["exoutia <jhav365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
spotipy = "^2.23.0"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
mutagen = "^1.47.0"
flask = {extras = ["all"], version = "^3.0.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
